Refactor email config

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,25 +1,26 @@
-# Configuration for dnsblchk
+# Configuration for DNS Black List Checker.
 
 # General settings
 run_once: true  # If true, the script will run once and then exit.
 sleep_hours: 3   # Hours to sleep between checks if run_once is false.
 
-# Logging settings
-logging:
-  level: "INFO"         # Logging level: DEBUG, INFO, WARN, ERROR (default: INFO)
-  console_print: true   # Print logs to console in addition to file (default: true)
-  log_dir: "logs/"      # Directory for log files
-  log_file: "logs/dnsblchk.log"  # Main log file path
+# File paths (relative to the project root).
+servers_file: "config/servers.txt" # File containing the list of RBL servers.
+ips_file: "config/ips.txt"         # File containing the list of IP addresses to check.
+report_dir: "logs/"                # Directory for storing report files.
 
 # Email alerting
-email_report: true # If true, an email report will be sent if there are listed IPs.
-recipients:
-  - "vlad@missioninbox.com"
-from_email: "vlad@beta.obmengine.com"
-smtp_host: "localhost"
-smtp_port: 25
+email:
+  enabled: true # If true, an email report will be sent if there are listed IPs.
+  recipients:
+    - "vlad@missioninbox.com"
+  sender: "vlad@beta.obmengine.com"
+  smtp_host: "localhost"
+  smtp_port: 25
 
-# File paths (relative to the project root)
-servers_file: "config/servers.txt"
-ips_file: "config/ips.txt"
-report_dir: "logs/"
+# Logging settings
+logging:
+  level: "DEBUG"                # Logging level: DEBUG, INFO, WARN, ERROR (default: INFO).
+  console_print: true           # Print logs to console in addition to file (default: true).
+  log_dir: "logs/"              # Directory for log files.
+  log_file: "logs/dnsblchk.log" # Main log file path.
