Add threading support

--- a/config/config.yaml
+++ b/config/config.yaml
@@ -1,6 +1,6 @@
 # Configuration for DNS Black List Checker.
 
-# General settings
+# General settings.
 run_once: true  # If true, the script will run once and then exit.
 sleep_hours: 3   # Hours to sleep between checks if run_once is false.
 
@@ -9,7 +9,12 @@ servers_file: "config/servers.txt" # File containing the list of RBL servers.
 ips_file: "config/ips.txt"         # File containing the list of IP addresses to check.
 report_dir: "logs/"                # Directory for storing report files.
 
-# Email alerting
+# Threading settings.
+threading:
+  enabled: true    # Enable multithreading for DNSBL checks (default: true).
+  thread_count: 10 # Number of worker threads (default: 10, minimum: 1).
+
+# Email alerting.
 email:
   enabled: true # If true, an email report will be sent if there are listed IPs.
   recipients:
@@ -18,7 +23,7 @@ email:
   smtp_host: "localhost"
   smtp_port: 25
 
-# Logging settings
+# Logging settings.
 logging:
   level: "DEBUG"                # Logging level: DEBUG, INFO, WARN, ERROR (default: INFO).
   console_print: true           # Print logs to console in addition to file (default: true).
